# ProgrammingCourseBackup

Baratynskiy10813/: Курсовая-Баратынский.docx
Betaev/: Границы проекта.docx  Отчёт по курсовому проекту.doc  Постановка задачи.docx  Список БД.docx
Dmitrey/: Отчёт_по_курсовому_проекту.doc  Постановка задачи.doc
Eleshevich_A/: help.txt
KlimovSergey/: Отчет по практикуму №4.doc
Klincharski_V/: Отчет по курсовой.docx  ТехЗадание.docx
MurashkoDenis/: Отчет по Java.docx  Отчет по проекту.docx  Подготовить описание образа и границ проекта.txt
NazarovaKs/: Save.txt  cell.cpp  cell.h  check.cpp  (+13 more)
aleksuk10813/source/: CMakeLists.txt  config.xml  config_handler.cpp  config_handler.h  directions.xml  dispatcher.cpp  dispatcher.h  logger.cpp  main.cpp  receivers.h  remote_control.cpp  remote_control.h  rss_receiver.cpp  sem2.pro  senders.h  shared.cpp  shared.h  smtp_sender.cpp  test_receiver.cpp  test_sender.cpp  test_xml.txt  tests.cpp  tests.h
aleksuk10813/source/user_gui/: add_dialog.h  add_dialog.ui  mainwindow.cpp  mainwindow.h  user_gui.pro  widget.cpp
trunk/aleksuk10813/source/: CMakeLists.txt  class_diagram.xmi  config.xml  config_handler.cpp  config_handler.h  directions.xml  dispatcher.cpp  dispatcher.h  guids_reference.xml  logger.h  main.cpp  receivers.h  remote_control.cpp  remote_control.h  rss_receiver.cpp  sem2.pro  senders.h  shared.cpp  shared.h  smtp_sender.cpp  test_receiver.cpp  test_sender.cpp  tests.cpp  tests.h
trunk/aleksuk10813/source/user_gui/: add_dialog.cpp  main.cpp  mainwindow.h  mainwindow.ui  user_gui.pro  widget.cpp  widget.h
(+1354 files in other folders)
